--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,33 @@ body {
   height: 100vh;
 }
 
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--secondary) var(--primary);
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 8px;
+}
+
+*::-webkit-scrollbar-track {
+  background: rgb(23, 23, 23);
+  border-radius: 4px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: rgb(67, 67, 67);
+  border-radius: 16px;
+  /* border: 3px solid var(--primary); */
+}
+
+.modalstyles {
+  background: rgba(8, 8, 8, 0.24);
+  box-shadow: rgb(0 0 0 / 35%) 0px 5px 15px;
+}
+
 .select-wrapper {
   position: relative;
 }
@@ -42,8 +69,8 @@ body {
 
 .modal-center {
   position: absolute;
-  top: 25%;
-  left: 50%;
+  top: 10%;
+  right: 10%;
   transform: translate(-50%, -50%);
 }
 
@@ -69,7 +96,7 @@ body {
   }
 
   .modal {
-    @apply modal-center min-w-[256px] max-h-[450px] overflow-y-auto bg-dark flex;
+    @apply modal-center min-w-[256px] max-h-[450px] overflow-y-auto modalstyles flex;
   }
 
   .focus {
