--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,6 +10,11 @@
   box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+  width: 0 !important; /* Remove scrollbar space */
+  background: transparent !important; /* Optional: just make scrollbar invisible */
+}
+
 body {
   overflow-y: hidden !important;
   max-height: 100vh;
