fixed dark/light mode problem

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -20,6 +20,7 @@ body {
   max-height: 100vh;
   height: 100vh;
   background: rgb(28, 28, 28);
+  /* background: rgb(220, 220, 220); */
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
 }
 
