--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,40 +1,1 @@
-/* lato-regular - latin */
-@font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 400;
-  src: url('../assets/fonts/lato/lato-v23-latin-regular.eot?#iefix') format('embedded-opentype'),
-    /* IE6-IE8 */ url('../assets/fonts/lato/lato-v23-latin-regular.woff2') format('woff2'),
-    /* Super Modern Browsers */ url('../assets/fonts/lato/lato-v23-latin-regular.woff')
-      format('woff'),
-    /* Modern Browsers */ url('../assets/fonts/lato/lato-v23-latin-regular.ttf') format('truetype'),
-    /* Safari, Android, iOS */ url('../assets/fonts/lato/lato-v23-latin-regular.svg#Lato')
-      format('svg'); /* Legacy iOS */
-}
-/* lato-italic - latin */
-@font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Lato';
-  font-style: italic;
-  font-weight: 400;
-  src: url('../assets/fonts/lato/lato-v23-latin-italic.eot?#iefix') format('embedded-opentype'),
-    /* IE6-IE8 */ url('../assets/fonts/lato/lato-v23-latin-italic.woff2') format('woff2'),
-    /* Super Modern Browsers */ url('../assets/fonts/lato/lato-v23-latin-italic.woff')
-      format('woff'),
-    /* Modern Browsers */ url('../assets/fonts/lato/lato-v23-latin-italic.ttf') format('truetype'),
-    /* Safari, Android, iOS */ url('../assets/fonts/lato/lato-v23-latin-italic.svg#Lato')
-      format('svg'); /* Legacy iOS */
-}
-/* lato-700 - latin */
-@font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 700;
-  src: url('../assets/fonts/lato/lato-v23-latin-700.eot?#iefix') format('embedded-opentype'),
-    /* IE6-IE8 */ url('../assets/fonts/lato/lato-v23-latin-700.woff2') format('woff2'),
-    /* Super Modern Browsers */ url('../assets/fonts/lato/lato-v23-latin-700.woff') format('woff'),
-    /* Modern Browsers */ url('../assets/fonts/lato/lato-v23-latin-700.ttf') format('truetype'),
-    /* Safari, Android, iOS */ url('../assets/fonts/lato/lato-v23-latin-700.svg#Lato') format('svg'); /* Legacy iOS */
-}
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
