--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -23,6 +23,14 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+.bgDark::backdrop {
+  background: rgb(28, 28, 28);
+}
+
+.bgLight::backdrop {
+  background: rgb(171, 171, 171);
+}
+
 body::backdrop {
   background: rgb(28, 28, 28);
 }
@@ -86,22 +94,12 @@ body::backdrop {
 }
 
 .last-child-event-line {
-  border-image: linear-gradient(
-    to bottom,
-    #dfe6e9 55%,
-    #dfe6e9 50%,
-    rgba(108, 219, 141, 0) 50%
-  );
+  border-image: linear-gradient(to bottom, #dfe6e9 55%, #dfe6e9 50%, rgba(108, 219, 141, 0) 50%);
   border-image-slice: 1;
 }
 
 .last-event-line {
-  border-image: linear-gradient(
-    to bottom,
-    #dfe6e9 50%,
-    #dfe6e9 50%,
-    rgba(108, 219, 141, 0) 50%
-  );
+  border-image: linear-gradient(to bottom, #dfe6e9 50%, #dfe6e9 50%, rgba(108, 219, 141, 0) 50%);
   border-image-slice: 1;
 }
 
