--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -57,6 +57,13 @@ body::backdrop {
   /* border: 3px solid var(--primary); */
 }
 
+/*! DO NOT REMOVE */
+#headlessui-portal-root {
+  position: relative;
+  z-index: 9999;
+  width: 100vw;
+}
+
 .modalstyles {
   background: rgba(8, 8, 8, 0.24);
   box-shadow: rgb(0 0 0 / 35%) 0px 5px 15px;
