--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -113,8 +113,8 @@ body::backdrop {
 .last-event-line {
   border-image: linear-gradient(
     to bottom,
-    #dfe6e9 50%,
-    #dfe6e9 50%,
+    rgb(55, 60, 75) 50%,
+    rgb(55, 60, 75) 50%,
     rgba(108, 219, 141, 0) 50%
   );
   border-image-slice: 1;
