--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -19,6 +19,7 @@ body {
   height: 100vh;
   background: black;
   font-family: "Roboto", sans-serif;
+  overflow-y: hidden;
 }
 
 .bgDark::backdrop {
