--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,8 +13,12 @@
   background: transparent !important; /* Optional: just make scrollbar invisible */
 }
 
+html,
 body {
   overflow-y: hidden !important;
+}
+
+body {
   max-height: 100vh;
   height: 100vh;
   background: black;
